--- a/adminPanel/templates/gestion_productos/agregar_product.html
+++ b/adminPanel/templates/gestion_productos/agregar_product.html
@@ -14,7 +14,7 @@
                             {{productform}}
                        
                         <div class="d-flex justify-content-end mt-5">
-                            <input class="btn btn-secondary" type="submit" value="Cancelar"></input>
+                            <a class="btn btn-secondary me-2" href="{% url 'list_product_admin' %}">Atras</a>
                             &nbsp; <!--Espacio entre botones-->
                             <input class="btn btn-primary" type="submit" value="Guardar"></input>
                         </div>
