--- a/adminPanel/templates/gestion_productos/list_product.html
+++ b/adminPanel/templates/gestion_productos/list_product.html
@@ -17,7 +17,8 @@
                         <th></th>
                         <th></th>
                         <th></th>
-                        <th>filtro por estado(activo-agotado)</th>
+                        <th></th>
+                        <th>{% include 'gestion_productos/filtros/filtro_estado_product.html' %}</th>
                     </tr>
                 </thead>
                 <thead>
