--- a/adminPanel/templates/gestion_productos/editar_product.html
+++ b/adminPanel/templates/gestion_productos/editar_product.html
@@ -44,7 +44,7 @@
                         </div>
 
                         <div class="d-flex justify-content-end mt-4">
-                            <a class="btn btn-secondary me-2" href="#">Cancelar</a>
+                            <a class="btn btn-secondary me-2" href="{% url 'list_product_admin' %}">Atras</a>
                             <input class="btn btn-primary" type="submit" value="Guardar">
                         </div>
                     </form>
