--- a/report/templates/list_report_ordenes/reporte_orden.html
+++ b/report/templates/list_report_ordenes/reporte_orden.html
@@ -38,5 +38,8 @@
     {% endfor %}
 </table>
 
+<a href="{% url 'descargar_ordenes' %}?descargar=true" class="btn btn-primary">Descargar Reporte Excel</a>
+
+
 
 {% endblock %}
