--- a/report/templates/list_report_ordenes/reporte_orden.html
+++ b/report/templates/list_report_ordenes/reporte_orden.html
@@ -2,11 +2,19 @@
 
 
 {% block content_admin %}
-
+TOTAL ORDENES: {{ordens | length}}
 <table class="table">
     <thead>
         <tr>
-            <th>Exportar a excel</th>
+            <th>
+            <a href="{% url 'descargar_ordenes' %}?descargar=true&searchEstadoreporte={{ queryestadoreport }}
+            {% if fecha_inicio %}
+                &fecha_inicio={{ fecha_inicio }}
+            {% endif %}
+            {% if fecha_fin %}
+                &fecha_fin={{ fecha_fin }}
+            {% endif %}" class="btn btn-primary">Descargar Reporte Excel</a>
+            </th>
             <th></th>
             <th></th>
             <th>{% include 'list_report_ordenes/filtros/filtro_estado_report.html' %}</th>
@@ -24,22 +32,24 @@
         </tr>
     </thead>
     {% for ordenes in ordens %}
-            {% if not ordenes.status == 'CREATED' %}
-                <tbody>
-                    <tr>
-                        <td>#{{ordenes.num_orden}}</td>
-                        <td>{{ordenes.user.first_name | title}} {{ordenes.user.last_name | title}}</td>
-                        <td>{{ordenes.total}}</td>
-                        <td>{{ordenes.get_status_display}}</td>
-                        <td>{{ordenes.fecha_pagada|date:"d/m/Y"}}</td>
-                    </tr>
-                </tbody>
-            {% endif %}
+        <tbody>
+            <tr>
+                <td>#{{ordenes.num_orden}}</td>
+                <td>{{ordenes.user.first_name | title}} {{ordenes.user.last_name | title}}</td>
+                <td>{{ordenes.total}}</td>
+                <td>{{ordenes.get_status_display}}</td>
+                {% if ordenes.status == 'CREATED' %}
+                    <td>{{ordenes.create_at |date:"d/m/Y"}}</td>
+                {% else %}
+                    <td>{{ordenes.fecha_pagada|date:"d/m/Y"}}</td>
+                {% endif %}
+            </tr>
+        </tbody>
+        
     {% endfor %}
 </table>
 
 
-<a href="{% url 'descargar_ordenes' %}?descargar=true&searchEstadoreporte={{ queryestadoreport }}{% if fecha_inicio %}&fecha_inicio={{ fecha_inicio }}{% endif %}{% if fecha_fin %}&fecha_fin={{ fecha_fin }}{% endif %}" class="btn btn-primary">Descargar Reporte Excel</a>
 
 
 {% endblock %}
