--- a/dashboard/templates/dashboard_ordens.html
+++ b/dashboard/templates/dashboard_ordens.html
@@ -1,8 +1,28 @@
+{% extends 'base_admin.html' %}
+{% load static %}
 
-<div style="width: 700px; height: 500px;">
-{% if grafico != "No hay datos para mostrar" %}
-  <div>{{ grafico|safe }}</div>
-{% else %}
-  <p>{{ grafico }}</p>
-{% endif %}
+{% block content_admin %}
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
+Dashboard
+
+<div style="display: flex; flex-direction: row; justify-content: center; margin-bottom: -15px;">
+  <form id="filtro-fechas" >
+    <label>Desde: <input type="date" id="desde" name="desde"></label> 
+    <label>Hasta: <input type="date" id="hasta" name="hasta"></label>
+    <button type="submit">Filtrar</button>
+  </form>
+
 </div>
+
+  <div id="chart" class="chart">
+
+  </div>
+
+
+
+<div id="chart2" class="chart2">
+
+</div>
+<script src="{% static 'js/main.js' %}" defer></script>
+{% endblock %}
+
